fix: height overflow

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
 }
 
-.body {
+html,
+body {
+    height: 100%;
+    overflow: hidden;
     background-color: black;
 }
 
